fix obs-panel overflow on mobile

--- a/public/assets/style/card.css
+++ b/public/assets/style/card.css
@@ -286,4 +286,8 @@
     top: 10px;
     right: 10px;
   }
+
+  .card-extended-details-body {
+    flex-wrap: wrap;
+  }
 }
